test/spec_vectors/conversions/fail/module_22.wat
(module (func (result f64) (f64.convert_i64_s (i32.const 0))))